--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ description: My personal WebSite/Portfolio about my work and research
 twitter_username: gasaapa
 github_username: https://github.com/pablosaa
 markdown: kramdown
-baseurl: /pablosaa.github.io
+baseurl: / #<!--pablosaa.github.io-->
 exclude: ['README.md']
 PDFmiub: http://www.meteo.uni-bonn.de/mitarbeiter/pablo-saavedra-garfias
