--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,5 @@ markdown: kramdown
 baseurl: /pablosaa.github.io
 exclude: ['README.md']
 PDFmiub: http://www.meteo.uni-bonn.de/mitarbeiter/pablo-saavedra-garfias
+plugings: ['jekyll-twitter-plugin']
+
